<resources>
    <string name="app_name">Cookin by the Book</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recipes</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="account">Account</string>
    <string name="logo_description">Cooking app logo of cookbook and fork and spoon.</string>
    <string name="account_avatar">account avatar</string>
    <string-array name="filters_array">
        <item>None</item>
        <!-- <item>Favorites</item> -->
        <item>My Recipes</item>
        <item>Shared with me</item>
    </string-array>
    <string-array name="search_array">
        <item>Name</item>
        <item>Ingredients</item>
        <item>Category</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="recipe_name">Recipe name</string>
    <string name="cook_time">Cook Time</string>
    <string name="prep_time">Prep Time</string>
    <string name="servings">Servings</string>
    <string name="steps">Steps</string>
    <string name="ingredients">Ingredients</string>
    <string name="fuck_off">fuck off</string>
    <string name="notes">Notes</string>
    <string name="write_notes_here">Write notes here...</string>
    <string name="write_categories_here_comma_seperated">Write categories here... (Comma seperated)</string>
    <string name="categories">Categories</string>
    <string name="ingredient">Ingredient</string>
    <string name="quantity">Quantity</string>
    <string name="step">Step</string>
    <string name="all_recipes">All Recipes</string>
    <string name="my_recipes">My Recipes</string>
</resources>
