<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mobileappdev.cookinbythebook.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.mobileappdev.cookinbythebook.ui.dashboard.DashboardFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_add_recipe"
        android:name="com.mobileappdev.cookinbythebook.navigation_add_recipe"
        android:label="@string/add_recipe"
        tools:layout="@layout/fragment_navigation_add_recipe" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.mobileappdev.cookinbythebook.navigation_account"
        android:label="@string/account"
        tools:layout="@layout/fragment_navigation_account" />

</navigation>