<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <EditText
        android:id="@+id/newIngredientName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="45"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/ingredient"
        android:text=""
        android:autofillHints="" />
    <EditText
        android:id="@+id/newIngredientQuantity"
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_weight="25"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/quantity"
        android:text=""
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/newIngredientDeleteButton"
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        app:srcCompat="@android:drawable/ic_delete"
        android:contentDescription="@string/fuck_off" />

</LinearLayout>