<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    tools:context=".ViewRecipeActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="60dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/staticLinearRecipeWithButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/staticRecipeName"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="25"
                    android:textSize="36sp"
                    android:ems="10"
                    android:text="Placeholder Text"
                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/staticLinearNumberRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/staticLinearRecipeWithButton">

                <TextView
                    android:id="@+id/staticPrepTime"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:textSize="18dp"
                    android:text="Prep:\n69 minutes"
                    android:ems="10"
                    />

                <TextView
                    android:gravity="center"
                    android:id="@+id/staticCookTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:textSize="18dp"
                    android:ems="10"
                    android:text="Cook:\n69 minutes"
                    />

                <TextView
                    android:id="@+id/staticServings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:ems="10"
                    android:text="Serves:\n69"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/staticVerticalIngredientsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/staticLinearNumberRow"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/staticLinearAddIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/staticIngredientsLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="25"
                        android:textSize="28sp"
                        android:text="@string/ingredients" />


                </LinearLayout>


                <ListView
                    android:id="@+id/staticIngredientsListView"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:nestedScrollingEnabled="true"
                    android:layout_marginTop="11dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticIngredientsLabel" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/staticVerticalStepsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/staticVerticalIngredientsContainer"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/staticLinearAddSteps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/staticStepsLabel"
                        android:layout_width="0dp"
                        android:layout_weight="25"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="28sp"
                        android:text="@string/steps"
                        android:layout_height="wrap_content" />



                </LinearLayout>


                <ListView
                    android:id="@+id/staticStepsListView"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:nestedScrollingEnabled="true"
                    android:layout_marginTop="11dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/staticIngredientsLabel" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/staticVerticalNotesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/staticVerticalStepsContainer">

                <TextView
                    android:id="@+id/staticNotesLabel"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:text="@string/notes" />

                <TextView
                    android:id="@+id/staticNotesTextMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/staticVerticalNotesContainer"
                android:id="@+id/staticVerticalCategoriesContainer"
                >
                <TextView
                    android:id="@+id/staticCategoriesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/categories"
                    />
                <TextView
                    android:id="@+id/staticCategoriesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>